--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-Hello World
+<!DOCTYPE html>
+<html>
+  <head>
+    <link rel="stylesheet" href="styles.css">  
+  </head>
+  <body>
+    <h1>Hello, World.</h1>
+    <p>This is a work in progress.</p>
+  </body>
+</html>
