--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <link rel="stylesheet" href="styles.css">  
-  </head>
-  <body>
-    <h1>Hello, World.</h1>
-    <p>This is a work in progress.</p>
-  </body>
+<html lang="en">
+    <head>
+        <title>About Me</title>
+
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+    <body>
+        <h1><strong>About Me</strong></h1>
+        <p>
+            Quan Bui<br>
+            <a href="mailto:qbui@calpoly.edu">qbui@calpoly.edu</a><br>
+            <a href="https://linkedin.com/in/q2bui">Linkedin</a><br>
+            <a href="https://github.com/QuanHBui">Github</a><br>
+        </p>
+    </body>
 </html>
